feat(deimos): :sparkles: adiciona GET para rota /plunder/predict/{world}
